This file includes only a short list of the changes between MPC-HC's versions.
For the older changes see:
https://github.com/mpc-hc/mpc-hc/blob/master/docs/Changelog_old.txt

Legend:
+ New
* Changed
! Fixed


1.7.3 - 02 February 2014
========================
+ New Galician and Vietnamese translations
+ Ticket #3873, Display tooltip with H/W decoder name on hover over status message
* Updated Armenian, Basque, British English, Simplified Chinese, French, German, Japanese, Malay,
  Polish, Portuguese (Brazil), Romanian, Slovak, Spanish, Swedish, Turkish and Ukrainian translations
! Some subtitle entries could have been missing depending on how they overlapped in time
! Ticket #2870, Fix rare visual glitches on status bar
! Ticket #3881, DXVA status was invalid with certain decoders
! Ticket #3981, Subtitle renderer: the blur filter was sometimes wrong on some part of the subpicture
! Ticket #3988, DVD favorites: the position in the DVD was not restored. Additionally if "Remember DVD position"
  is enabled and a DVD favorite has a position, the position from the favorite will be used instead of the
  remembered position. Also fix loading of DVD favorites created with no position.
! Ticket #3998, The "Debug Shaders" dialog icon was missing when a translation was used


1.7.2 - 26 January 2014
=======================
+ Added support for XySubFilter, only compatible with embedded subtitles for now
+ New option to auto-hide docked panels together with toolbars
+ Support pixel shader presets (with shortcuts and command line options)
+ Show more descriptive window title in capture mode
+ Ability to add all media files in folder from playlist panel context menu
+ New Croatian and Malay translations
+ Ticket #1556, Ability to move the player window by dragging the video area during DVD playback
+ Ticket #2251, Show hidden main menu with Alt key
+ Ticket #3235, Option to delay playback when auto-change fullscreen monitor mode feature is used